# MR-CUSSP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_mcussp.sh
inc/: BeliefSet.h  Definitions.h  DomainCosts.h  FrontierSelection.h  GraphBridge.h  IOUtils.h  JointObservation.h  LexCompare.h  MAP.h  ObservationPhysics.h  ScalarizationWeights.h  ThetaTable.h  TimingHarness.h  action.h  agent.h  animation.h  continuous.h  environment.h  formation.h  helper_utils.h  high_level_planner.h  mapf_helper.h  mapf_solver.h  neighbor.hpp  params.h  state.h
inc/HighLevel/: HighLevelSolver.h  lcbsSolver.h  scalarizationSolver.h
inc/InfoGathering/: ARVI.h
inc/LowLevel/: RunLAstar.h
inc/pipeline/: ArviStage1Planner.h  BaselineStage1.h  CimopStage1Planner.h  MapfStage2Planner.h  PipelineTypes.h  SaiaStage1Planner.h  Stage1Loop.h
maps/forestfire/: cost-2.cost  cost-3.cost  forestfire.map  forestfire_og.map
maps/forestfire/scenario_files/: Phase1.scen  Phase2.scen
maps/salp/: cost-1.cost  cost-2.cost  cost-3.cost  cost-4.cost  salp.map
maps/salp/scenario_files/: Phase1.scen  Phase2.scen  salp.scen  salp0.scen  salp1.scen  salp2.scen  salp3.scen  salp4.scen  salp5.scen
maps/salp_og/: cost-2.cost  cost-3.cost  salp.map  salp_og.map
maps/salp_og/scenario_files/: Phase1.scen  Phase2.scen  salp.scen
maps/salp_og_hardware/: cost-2.cost  cost-3.cost  salp.map
maps/salp_og_hardware/scenario_files/: Phase1.scen  Phase2.scen  salp.scen
maps/salp_working/: cost-1.cost  cost-2.cost  cost-3.cost  cost-5.cost  salp.map
maps/salp_working/scenario_files/: Phase1.scen  Phase2.scen  salp.scen
maps/warehouse/: cost-2.cost  warehouse.map
maps/warehouse/scenario_files/: Phase1.scen  Phase2.scen  warehouse.scen  warehouse_rand.scen
maps/warehouse_hardware_exp/: cost-1.cost  cost-2.cost  warehouse.map  warehouse_1.map  warehouse_new.map
maps/warehouse_hardware_exp/scenario_files/: Phase1.scen  Phase2.scen  warehouse.scen  warehouse_og.scen
scripts/: _plot_context_tmp.py  animate_forestfire.py  animate_salp.py  animate_warehouse.py  animate_warehouse_og.py  generate_scenario_files.py  manipulator_plots.py  plot_IAC_vs_num_of_landmarks.py  plot_belief_entropy_agg.py  plot_belief_entropy_agg_adjusted.py  plot_belief_entropy_agg_editor.py  plot_plan_cost_vs_num_of_uninformative_landmarks.py  plot_time_scalability.py  plot_time_scalability_editor.py  plot_total_planning_time_by_approach.py  plot_value_vs_agents_agg.py  regenerate_figures.py  run_pipeline_sweep.py
src/: DomainCosts.cpp  GraphBridge.cpp  IOUtils.cpp  ScalarizationWeights.cpp  ThetaTable.cpp  action.cpp  agent.cpp  continuous.cpp  environment.cpp  main.cpp  mapf_helper.cpp  mapf_solver.cpp  params.cpp  pipeline_main.cpp
src/HighLevel/: ConflictResolver.cpp  HighLevelSolver.cpp  epsSolver.cpp  kSolver.cpp  lcbsSolver.cpp  pexSolver.cpp  scalarizationSolver.cpp
src/InfoGathering/: ARVI.cpp
src/LowLevel/: ApexSearch.cpp  RunLAstar.cpp
src/pipeline/: ArviStage1Planner.cpp  CimopStage1Planner.cpp  MapfStage2Planner.cpp  PipelineDriver.cpp  SaiaStage1Planner.cpp
tests/: test_apex_lastar_equiv.cpp  test_baseline_fairness.cpp  test_belief_set.cpp  test_env_costs.cpp  test_landmark_sequence.cpp  test_lastar.cpp  test_lex_compare.cpp  test_pipeline_golden.cpp  test_saia_sanity.cpp
tests/golden/: salp_belief_entropy_OURS_A5_scen1.txt
